<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/white_style"
    android:orientation="vertical"
    android:weightSum="1.0"
    android:id="@+id/root" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="#ff821b1b"
        android:padding="4.0dip" >

        <Button
            android:id="@+id/button_back"
            android:layout_width="60.0dip"
            android:layout_height="30.0dip"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/backbutton" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text=""
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/textView1"
            android:layout_toEndOf="@id/button_back"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="14.0dip"

            android:drawableStart="@drawable/coin"
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>
    
    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/facebook"
        android:visibility="invisible"
        android:filterTouchesWhenObscured="true" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:text="@string/twitter"
        android:visibility="gone"
        android:filterTouchesWhenObscured="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:text="@string/youtube"
        android:visibility="gone"
        android:filterTouchesWhenObscured="true" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:text="@string/rateapp"
        android:filterTouchesWhenObscured="true" />
    
    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:text="@string/moreapp"
        android:filterTouchesWhenObscured="true" />
    
    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:text="@string/website"
        android:filterTouchesWhenObscured="true" />
    
    <Button
        android:id="@+id/button7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_centerHorizontal="true"
        android:text="@string/shareapp"
        android:filterTouchesWhenObscured="true" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_publisher_id" />
    </RelativeLayout>
    
</RelativeLayout>