<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/app_bg_style"
    android:orientation="vertical"
    android:weightSum="1.0" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:padding="4.0dip" >

        <Button
            android:id="@+id/button1"
            android:layout_width="60.0dip"
            android:layout_height="30.0dip"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:filterTouchesWhenObscured="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg2"
            android:gravity="center" />

         <RelativeLayout
             android:layout_width="95dip"
             android:layout_height="40.0dip"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/bg1"
             android:padding="4.0dip" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text=""
            android:textAppearance="?android:textAppearanceMedium" />

    </RelativeLayout>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="50.0dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/admob_publisher_id" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/relativeLayout1"
        android:orientation="vertical"
        android:weightSum="1.0">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="215dp"
            android:id="@+id/RelativeLayout1">

           <ImageView
               android:id="@+id/imageView1"
               android:layout_width="215dp"
               android:layout_height="215dp"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="11.0dip"
               android:background="@drawable/pic_bg"
               android:padding="20dp"
               android:scaleType="fitXY"
               android:contentDescription="@string/app_name" />
 
            <TextView
                android:id="@+id/txt_ribon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/imageView1"
                android:layout_alignTop="@id/imageView1"
                android:layout_marginEnd="4dp"
                android:background="@drawable/circleshape2"
                android:padding="8dp"
                android:gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

                        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/RelativeLayout1"

                            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
           >


           <LinearLayout
                android:id="@+id/world_layout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
          android:layout_marginTop="0dip"        
      
                android:layout_alignParentTop="true"
                       android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal"
                
                 >
                <Button
                android:id="@+id/button3"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:filterTouchesWhenObscured="true"
                    android:background="@drawable/bo4" />
                <Button
                android:id="@+id/button6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:filterTouchesWhenObscured="true"
              android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                android:background="@drawable/bo3"
                android:visibility="visible" />
                <Button
                android:id="@+id/button4"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                android:background="@drawable/bo2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:filterTouchesWhenObscured="true" />
                            <Button
                                style="@style/Widget.AppCompat.Button.Borderless"
                                android:filterTouchesWhenObscured="true"
                                android:id="@+id/button5"
                android:layout_width="55.0dip"
                android:layout_height="55.0dip"
                android:background="@drawable/bo1" />
</LinearLayout>

   <LinearLayout
                android:id="@+id/world_layout"
                android:layout_width="match_parent"
                android:layout_marginTop="1dip"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
          
          android:layout_below="@id/world_layout1"
                android:gravity="center"
                
                android:orientation="horizontal"
                
                >
            </LinearLayout>
             
             <LinearLayout
                android:id="@+id/charset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
          android:layout_marginTop="0dip"
          android:layout_below="@id/world_layout"
                
                android:gravity="center" >

                <Button
                    android:id="@+id/char1"
                    android:text="@string/a"
                    style="@style/btn_char"/>

                <Button
                    android:id="@+id/char2"
                    android:text="@string/a"
                    style="@style/btn_char"/>

                <Button
                    android:id="@+id/char3"
                    android:text="@string/a"
                    style="@style/btn_char"/>

                <Button
                    android:id="@+id/char4"
                    android:text="@string/a"
                    style="@style/btn_char" />

                <Button
                    android:id="@+id/char5"
                    android:text="@string/a"
                    style="@style/btn_char" />

                <Button
                    android:id="@+id/char6"
                    android:text="@string/a"
                    style="@style/btn_char" />
                            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
          
          android:layout_below="@id/charset"
                android:layout_marginTop="3dip"
                android:gravity="center" >

                <Button
                    android:id="@+id/char7"
                    android:text="@string/a"
                    style="@style/btn_char"/>

                <Button
                    android:id="@+id/char8"
                    android:text="@string/a"
                    style="@style/btn_char" />

                <Button
                    android:id="@+id/char9"
                    android:text="@string/a"
                    style="@style/btn_char" />

                <Button
                    android:id="@+id/char10"
                    android:text="@string/a"
                    style="@style/btn_char" />

                <Button
                    android:id="@+id/char11"
                    android:text="@string/a"
                    style="@style/btn_char" />

                <Button
                    android:id="@+id/char12"
                    android:text="@string/a"
                    style="@style/btn_char" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
<ProgressBar
    style="@style/Widget.AppCompat.ProgressBar"
    android:id="@+id/progressBar"
    android:visibility="gone"

    android:layout_centerInParent="true"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
</RelativeLayout>